// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SVG snapshots > floating window (no chrome) 1`] = `
"<svg width="1000" height="560" viewBox="0 0 1000 560" xmlns="http://www.w3.org/2000/svg"
  role="img" aria-label="Animated terminal showing: whoami, echo hi">
  <title>Animated terminal showing: whoami, echo hi</title>
  <desc>user@host:~$ whoami
dev
user@host:~$ echo hi
hi</desc>
  <style>
    .tt { font-family: JetBrains Mono, Fira Code, Ubuntu Mono, Consolas, Monaco, monospace; font-size: 14px; white-space: pre; }
    @keyframes scanlineScroll {
      from { transform: translateY(0); }
      to { transform: translateY(4px); }
    }
    .scanline-overlay { animation: scanlineScroll 1.2s linear infinite; }
    /* fadeIn drives all opacity fade-ins (prompt + output lines + animated frame
       wrappers). Lives in CSS rather than SMIL so the @media block below kills
       it under prefers-reduced-motion. fill-mode: backwards keeps the element
       at opacity 0 during the animation-delay window so it doesn't pop in
       before its scheduled time. */
    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
    .fade-in { animation: fadeIn 10ms linear backwards; }
    @media (prefers-reduced-motion: reduce) {
      *, *::before, *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
      }
    }
  </style>
  <defs>
    
    <pattern id="scanlines" patternUnits="userSpaceOnUse" width="1" height="2">
      <rect width="1" height="1" fill="transparent"/>
      <rect y="1" width="1" height="1" fill="rgba(255,255,255,0.02)"/>
    </pattern>
    
    <filter id="shadow" x="-8%" y="-8%" width="116%" height="120%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="8"/>
      <feOffset dx="0" dy="6" result="offsetblur"/>
      <feFlood flood-color="#000000" flood-opacity="0.55"/>
      <feComposite in2="offsetblur" operator="in"/>
      <feMerge>
        <feMergeNode/>
        <feMergeNode in="SourceGraphic"/>
      </feMerge>
    </filter>
    <clipPath id="terminalViewport">
      <rect x="0" y="0" width="1000" height="560"/>
    </clipPath>
  </defs>

  <g filter="url(#shadow)">
    
    <rect x="0" y="0" width="1000" height="560"
          rx="12" ry="12"
          fill="#0a0e27"/>
    
    
    <rect x="0" y="0" width="1000"
          height="560" fill="#0a0e27"/>
    <g clip-path="url(#terminalViewport)">
      <g id="scrollContainer" transform="translate(12, 14)">
        
        
    <g transform="translate(0, 0)">
      <defs><clipPath id="cmdrev-0"><rect x="109" y="-14" width="48" height="28"><animate attributeName="width" values="0;8;16;24;32;40;48" keyTimes="0.0000;0.1667;0.3333;0.5000;0.6667;0.8333;1.0000" calcMode="discrete" begin="0ms" dur="200ms" fill="freeze"/></rect></clipPath></defs>
      <text class="tt fade-in" style="animation-delay: 0ms" fill="#00ff9f" textLength="109" lengthAdjust="spacingAndGlyphs">user@host:~$ </text>
      <text class="tt" x="109" fill="#00ff9f" textLength="48" lengthAdjust="spacingAndGlyphs" clip-path="url(#cmdrev-0)">whoami</text>
      
    <rect x="109" y="-12" width="8" height="14"
          fill="#00ff41" opacity="0">
      <animate attributeName="opacity" from="0" to="1" begin="0ms" dur="10ms" fill="freeze"/>
      <animate attributeName="opacity" to="0" begin="200ms" dur="10ms" fill="freeze"/>
      <animate attributeName="x" values="109;109;117;125;133;141;149" keyTimes="0.0000;0.1667;0.3333;0.5000;0.6667;0.8333;1.0000" calcMode="discrete" begin="0ms" dur="200ms" fill="freeze"/>
    </rect>
    </g>

    <g transform="translate(0, 25.2)" class="fade-in" style="animation-delay: 1200ms">
      <text class="tt" fill="#e4e4e4">
        dev
      </text>
    </g>

    <g transform="translate(0, 50.4)">
      <defs><clipPath id="cmdrev-2"><rect x="109" y="-14" width="56" height="28"><set attributeName="width" to="0" begin="0s" end="2450ms"/><animate attributeName="width" values="0;8;16;24;32;40;48;56" keyTimes="0.0000;0.1429;0.2857;0.4286;0.5714;0.7143;0.8571;1.0000" calcMode="discrete" begin="2450ms" dur="200ms" fill="freeze"/></rect></clipPath></defs>
      <text class="tt fade-in" style="animation-delay: 2450ms" fill="#00ff9f" textLength="109" lengthAdjust="spacingAndGlyphs">user@host:~$ </text>
      <text class="tt" x="109" fill="#00ff9f" textLength="56" lengthAdjust="spacingAndGlyphs" clip-path="url(#cmdrev-2)">echo hi</text>
      
    <rect x="109" y="-12" width="8" height="14"
          fill="#00ff41" opacity="0">
      <animate attributeName="opacity" from="0" to="1" begin="2450ms" dur="10ms" fill="freeze"/>
      <animate attributeName="opacity" to="0" begin="2650ms" dur="10ms" fill="freeze"/>
      <animate attributeName="x" values="109;109;117;125;133;141;149;157" keyTimes="0.0000;0.1429;0.2857;0.4286;0.5714;0.7143;0.8571;1.0000" calcMode="discrete" begin="2450ms" dur="200ms" fill="freeze"/>
    </rect>
    </g>

    <g transform="translate(0, 75.6)" class="fade-in" style="animation-delay: 3650ms">
      <text class="tt">
        <tspan fill="#50fa7b">hi</tspan>
      </text>
    </g>
      </g>
    </g>
    
    <rect x="0" y="0" width="1000" height="560" fill="url(#scanlines)" pointer-events="none" opacity="0.5" class="scanline-overlay"/>
  </g>
</svg>"
`;

exports[`SVG snapshots > macOS chrome + default effects 1`] = `
"<svg width="1000" height="560" viewBox="0 0 1000 560" xmlns="http://www.w3.org/2000/svg"
  role="img" aria-label="Animated terminal showing: whoami, echo hi">
  <title>Animated terminal showing: whoami, echo hi</title>
  <desc>user@host:~$ whoami
dev
user@host:~$ echo hi
hi</desc>
  <style>
    .tt { font-family: JetBrains Mono, Fira Code, Ubuntu Mono, Consolas, Monaco, monospace; font-size: 14px; white-space: pre; }
    @keyframes scanlineScroll {
      from { transform: translateY(0); }
      to { transform: translateY(4px); }
    }
    .scanline-overlay { animation: scanlineScroll 1.2s linear infinite; }
    /* fadeIn drives all opacity fade-ins (prompt + output lines + animated frame
       wrappers). Lives in CSS rather than SMIL so the @media block below kills
       it under prefers-reduced-motion. fill-mode: backwards keeps the element
       at opacity 0 during the animation-delay window so it doesn't pop in
       before its scheduled time. */
    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
    .fade-in { animation: fadeIn 10ms linear backwards; }
    @media (prefers-reduced-motion: reduce) {
      *, *::before, *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
      }
    }
  </style>
  <defs>
    
    <pattern id="scanlines" patternUnits="userSpaceOnUse" width="1" height="2">
      <rect width="1" height="1" fill="transparent"/>
      <rect y="1" width="1" height="1" fill="rgba(255,255,255,0.02)"/>
    </pattern>
    
    <filter id="shadow" x="-8%" y="-8%" width="116%" height="120%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="8"/>
      <feOffset dx="0" dy="6" result="offsetblur"/>
      <feFlood flood-color="#000000" flood-opacity="0.55"/>
      <feComposite in2="offsetblur" operator="in"/>
      <feMerge>
        <feMergeNode/>
        <feMergeNode in="SourceGraphic"/>
      </feMerge>
    </filter>
    <clipPath id="terminalViewport">
      <rect x="0" y="40" width="1000" height="520"/>
    </clipPath>
  </defs>

  <g filter="url(#shadow)">
    
    <rect x="0" y="0" width="1000" height="560"
          rx="12" ry="12"
          fill="#0a0e27"/>
    
    <rect x="0" y="0" width="1000" height="40"
          rx="12" ry="12"
          fill="#151b2e"/>
    <rect x="0" y="16" width="1000" height="16"
          fill="#151b2e"/>
    <g id="window-controls">
      <circle cx="14" cy="16" r="6" fill="#ff5f57" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
      <circle cx="34" cy="16" r="6" fill="#ffbd2e" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
      <circle cx="54" cy="16" r="6" fill="#28ca42" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
    </g>
    <text x="500" y="24.55"
          font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif" font-size="13"
          fill="#e0e6ed" text-anchor="middle">
      user@terminal:~
    </text>
    
    <rect x="0" y="40" width="1000"
          height="520" fill="#0a0e27"/>
    <g clip-path="url(#terminalViewport)">
      <g id="scrollContainer" transform="translate(12, 54)">
        
        
    <g transform="translate(0, 0)">
      <defs><clipPath id="cmdrev-0"><rect x="109" y="-14" width="48" height="28"><animate attributeName="width" values="0;8;16;24;32;40;48" keyTimes="0.0000;0.1667;0.3333;0.5000;0.6667;0.8333;1.0000" calcMode="discrete" begin="0ms" dur="200ms" fill="freeze"/></rect></clipPath></defs>
      <text class="tt fade-in" style="animation-delay: 0ms" fill="#00ff9f" textLength="109" lengthAdjust="spacingAndGlyphs">user@host:~$ </text>
      <text class="tt" x="109" fill="#00ff9f" textLength="48" lengthAdjust="spacingAndGlyphs" clip-path="url(#cmdrev-0)">whoami</text>
      
    <rect x="109" y="-12" width="8" height="14"
          fill="#00ff41" opacity="0">
      <animate attributeName="opacity" from="0" to="1" begin="0ms" dur="10ms" fill="freeze"/>
      <animate attributeName="opacity" to="0" begin="200ms" dur="10ms" fill="freeze"/>
      <animate attributeName="x" values="109;109;117;125;133;141;149" keyTimes="0.0000;0.1667;0.3333;0.5000;0.6667;0.8333;1.0000" calcMode="discrete" begin="0ms" dur="200ms" fill="freeze"/>
    </rect>
    </g>

    <g transform="translate(0, 25.2)" class="fade-in" style="animation-delay: 1200ms">
      <text class="tt" fill="#e4e4e4">
        dev
      </text>
    </g>

    <g transform="translate(0, 50.4)">
      <defs><clipPath id="cmdrev-2"><rect x="109" y="-14" width="56" height="28"><set attributeName="width" to="0" begin="0s" end="2450ms"/><animate attributeName="width" values="0;8;16;24;32;40;48;56" keyTimes="0.0000;0.1429;0.2857;0.4286;0.5714;0.7143;0.8571;1.0000" calcMode="discrete" begin="2450ms" dur="200ms" fill="freeze"/></rect></clipPath></defs>
      <text class="tt fade-in" style="animation-delay: 2450ms" fill="#00ff9f" textLength="109" lengthAdjust="spacingAndGlyphs">user@host:~$ </text>
      <text class="tt" x="109" fill="#00ff9f" textLength="56" lengthAdjust="spacingAndGlyphs" clip-path="url(#cmdrev-2)">echo hi</text>
      
    <rect x="109" y="-12" width="8" height="14"
          fill="#00ff41" opacity="0">
      <animate attributeName="opacity" from="0" to="1" begin="2450ms" dur="10ms" fill="freeze"/>
      <animate attributeName="opacity" to="0" begin="2650ms" dur="10ms" fill="freeze"/>
      <animate attributeName="x" values="109;109;117;125;133;141;149;157" keyTimes="0.0000;0.1429;0.2857;0.4286;0.5714;0.7143;0.8571;1.0000" calcMode="discrete" begin="2450ms" dur="200ms" fill="freeze"/>
    </rect>
    </g>

    <g transform="translate(0, 75.6)" class="fade-in" style="animation-delay: 3650ms">
      <text class="tt">
        <tspan fill="#50fa7b">hi</tspan>
      </text>
    </g>
      </g>
    </g>
    
    <rect x="0" y="40" width="1000" height="520" fill="url(#scanlines)" pointer-events="none" opacity="0.5" class="scanline-overlay"/>
  </g>
</svg>"
`;

exports[`SVG snapshots > scanlines off + glow on 1`] = `
"<svg width="1000" height="560" viewBox="0 0 1000 560" xmlns="http://www.w3.org/2000/svg"
  role="img" aria-label="Animated terminal showing: whoami, echo hi">
  <title>Animated terminal showing: whoami, echo hi</title>
  <desc>user@host:~$ whoami
dev
user@host:~$ echo hi
hi</desc>
  <style>
    .tt { font-family: JetBrains Mono, Fira Code, Ubuntu Mono, Consolas, Monaco, monospace; font-size: 14px; white-space: pre; }
    @keyframes scanlineScroll {
      from { transform: translateY(0); }
      to { transform: translateY(4px); }
    }
    .scanline-overlay { animation: scanlineScroll 1.2s linear infinite; }
    /* fadeIn drives all opacity fade-ins (prompt + output lines + animated frame
       wrappers). Lives in CSS rather than SMIL so the @media block below kills
       it under prefers-reduced-motion. fill-mode: backwards keeps the element
       at opacity 0 during the animation-delay window so it doesn't pop in
       before its scheduled time. */
    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
    .fade-in { animation: fadeIn 10ms linear backwards; }
    @media (prefers-reduced-motion: reduce) {
      *, *::before, *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
      }
    }
  </style>
  <defs>
    
    
    <filter id="textGlow" x="-10%" y="-10%" width="120%" height="120%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="0.6" result="core"/>
      <feGaussianBlur in="SourceGraphic" stdDeviation="2" result="halo"/>
      <feMerge>
        <feMergeNode in="halo"/>
        <feMergeNode in="core"/>
        <feMergeNode in="SourceGraphic"/>
      </feMerge>
    </filter>

    <filter id="shadow" x="-8%" y="-8%" width="116%" height="120%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="8"/>
      <feOffset dx="0" dy="6" result="offsetblur"/>
      <feFlood flood-color="#000000" flood-opacity="0.55"/>
      <feComposite in2="offsetblur" operator="in"/>
      <feMerge>
        <feMergeNode/>
        <feMergeNode in="SourceGraphic"/>
      </feMerge>
    </filter>
    <clipPath id="terminalViewport">
      <rect x="0" y="40" width="1000" height="520"/>
    </clipPath>
  </defs>

  <g filter="url(#shadow)">
    
    <rect x="0" y="0" width="1000" height="560"
          rx="12" ry="12"
          fill="#0a0e27"/>
    
    <rect x="0" y="0" width="1000" height="40"
          rx="12" ry="12"
          fill="#151b2e"/>
    <rect x="0" y="16" width="1000" height="16"
          fill="#151b2e"/>
    <g id="window-controls">
      <circle cx="14" cy="16" r="6" fill="#ff5f57" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
      <circle cx="34" cy="16" r="6" fill="#ffbd2e" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
      <circle cx="54" cy="16" r="6" fill="#28ca42" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
    </g>
    <text x="500" y="24.55"
          font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif" font-size="13"
          fill="#e0e6ed" text-anchor="middle">
      user@terminal:~
    </text>
    
    <rect x="0" y="40" width="1000"
          height="520" fill="#0a0e27"/>
    <g clip-path="url(#terminalViewport)">
      <g id="scrollContainer" transform="translate(12, 54)" filter="url(#textGlow)">
        
        
    <g transform="translate(0, 0)">
      <defs><clipPath id="cmdrev-0"><rect x="109" y="-14" width="48" height="28"><animate attributeName="width" values="0;8;16;24;32;40;48" keyTimes="0.0000;0.1667;0.3333;0.5000;0.6667;0.8333;1.0000" calcMode="discrete" begin="0ms" dur="200ms" fill="freeze"/></rect></clipPath></defs>
      <text class="tt fade-in" style="animation-delay: 0ms" fill="#00ff9f" textLength="109" lengthAdjust="spacingAndGlyphs">user@host:~$ </text>
      <text class="tt" x="109" fill="#00ff9f" textLength="48" lengthAdjust="spacingAndGlyphs" clip-path="url(#cmdrev-0)">whoami</text>
      
    <rect x="109" y="-12" width="8" height="14"
          fill="#00ff41" opacity="0">
      <animate attributeName="opacity" from="0" to="1" begin="0ms" dur="10ms" fill="freeze"/>
      <animate attributeName="opacity" to="0" begin="200ms" dur="10ms" fill="freeze"/>
      <animate attributeName="x" values="109;109;117;125;133;141;149" keyTimes="0.0000;0.1667;0.3333;0.5000;0.6667;0.8333;1.0000" calcMode="discrete" begin="0ms" dur="200ms" fill="freeze"/>
    </rect>
    </g>

    <g transform="translate(0, 25.2)" class="fade-in" style="animation-delay: 1200ms">
      <text class="tt" fill="#e4e4e4">
        dev
      </text>
    </g>

    <g transform="translate(0, 50.4)">
      <defs><clipPath id="cmdrev-2"><rect x="109" y="-14" width="56" height="28"><set attributeName="width" to="0" begin="0s" end="2450ms"/><animate attributeName="width" values="0;8;16;24;32;40;48;56" keyTimes="0.0000;0.1429;0.2857;0.4286;0.5714;0.7143;0.8571;1.0000" calcMode="discrete" begin="2450ms" dur="200ms" fill="freeze"/></rect></clipPath></defs>
      <text class="tt fade-in" style="animation-delay: 2450ms" fill="#00ff9f" textLength="109" lengthAdjust="spacingAndGlyphs">user@host:~$ </text>
      <text class="tt" x="109" fill="#00ff9f" textLength="56" lengthAdjust="spacingAndGlyphs" clip-path="url(#cmdrev-2)">echo hi</text>
      
    <rect x="109" y="-12" width="8" height="14"
          fill="#00ff41" opacity="0">
      <animate attributeName="opacity" from="0" to="1" begin="2450ms" dur="10ms" fill="freeze"/>
      <animate attributeName="opacity" to="0" begin="2650ms" dur="10ms" fill="freeze"/>
      <animate attributeName="x" values="109;109;117;125;133;141;149;157" keyTimes="0.0000;0.1429;0.2857;0.4286;0.5714;0.7143;0.8571;1.0000" calcMode="discrete" begin="2450ms" dur="200ms" fill="freeze"/>
    </rect>
    </g>

    <g transform="translate(0, 75.6)" class="fade-in" style="animation-delay: 3650ms">
      <text class="tt">
        <tspan fill="#50fa7b">hi</tspan>
      </text>
    </g>
      </g>
    </g>
    
    
  </g>
</svg>"
`;

exports[`SVG snapshots > static SVG with markup 1`] = `
"<svg width="1000" height="560" viewBox="0 0 1000 560" xmlns="http://www.w3.org/2000/svg"
  role="img" aria-label="Static terminal showing 2 lines">
  <title>Static terminal showing 2 lines</title>
  <desc>hello
world</desc>
  <style>.tt { font-family: JetBrains Mono, Fira Code, Ubuntu Mono, Consolas, Monaco, monospace; font-size: 14px; white-space: pre; }</style>
  <defs>
    
    <pattern id="scanlines" patternUnits="userSpaceOnUse" width="1" height="2">
      <rect width="1" height="1" fill="transparent"/>
      <rect y="1" width="1" height="1" fill="rgba(255,255,255,0.02)"/>
    </pattern>
    
    <filter id="shadow" x="-8%" y="-8%" width="116%" height="120%">
      <feGaussianBlur in="SourceAlpha" stdDeviation="8"/>
      <feOffset dx="0" dy="6" result="offsetblur"/>
      <feFlood flood-color="#000000" flood-opacity="0.55"/>
      <feComposite in2="offsetblur" operator="in"/>
      <feMerge>
        <feMergeNode/>
        <feMergeNode in="SourceGraphic"/>
      </feMerge>
    </filter>
    <clipPath id="terminalViewport">
      <rect x="0" y="40" width="1000" height="520"/>
    </clipPath>
  </defs>

  <g filter="url(#shadow)">
    
    <rect x="0" y="0" width="1000" height="560"
          rx="12" ry="12"
          fill="#0a0e27"/>
    
    <rect x="0" y="0" width="1000" height="40"
          rx="12" ry="12"
          fill="#151b2e"/>
    <rect x="0" y="16" width="1000" height="16"
          fill="#151b2e"/>
    <g id="window-controls">
      <circle cx="14" cy="16" r="6" fill="#ff5f57" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
      <circle cx="34" cy="16" r="6" fill="#ffbd2e" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
      <circle cx="54" cy="16" r="6" fill="#28ca42" stroke="rgba(0,0,0,0.18)" stroke-width="0.5"/>
    </g>
    <text x="500" y="24.55"
          font-family="-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif" font-size="13"
          fill="#e0e6ed" text-anchor="middle">
      user@terminal:~
    </text>
    <rect x="0" y="40" width="1000"
          height="520" fill="#0a0e27"/>
    <g clip-path="url(#terminalViewport)">
      <g transform="translate(12, 54)">
        
      <text class="tt" y="0" fill="#e4e4e4">
        hello
      </text>
      <text class="tt" y="25">
        <tspan fill="#8be9fd">world</tspan>
      </text>
      </g>
    </g>
    
    <rect x="0" y="40" width="1000" height="520" fill="url(#scanlines)" pointer-events="none" opacity="0.5"/>
  </g>
</svg>"
`;
